2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/pwd2spwd.c: Cast number of days to a long integer.
	* libmisc/pwd2spwd.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of sp.sp_flag.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/defines.h: Include <config.h> since it uses the macro that
	might be defined in this header file.
	* lib/defines.h: Prefer checking if HAVE_LOCALE_H or ENABLE_NLS
	are defined (rather than set to non 0).
	* lib/defines.h: The dummy implementations of bindtextdomain() and
	textdomain() should return a pointer. Return NULL instead of
	/* empty */
	* lib/defines.h: Define SHADOW_SP_FLAG_UNSET, to be used for the
	initialization of sp_flag field of the shadow structures.
	* lib/defines.h: Define LC_ALL, needed even if HAVE_LOCALE_H is
	not defined.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/sulog.c: Ignore the return value of umask() when the
	mask is restored.
	* libmisc/sulog.c: Add brackets.
	* libmisc/sulog.c: Ignore return value of time() when use with a
	non NULL argument.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/log.c: Avoid assignments in comparisons.
	* libmisc/log.c: Add brackets and parenthesis.
	* libmisc/log.c: read() returns a ssize_t (note size_t).
	* libmisc/log.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/log.c: Ignore return value of time() when use with a
	non NULL argument.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/strtoday.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/strtoday.c: Add brackets and parenthesis.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c: Use a size_t for the size of strings instead of
	unsigned int.
	* libmisc/salt.c: Add brackets and parenthesis.
	* libmisc/salt.c: Avoid assignments in comparisons.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>